--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,8 @@
-all: ex1.glf ex1.pileup.gz ex1.bam.bai ex1.glfview.gz ex2.sam.gz ex2.sam ex1.sam ex3.bam ex3.bam.bai ex4.bam ex4.bam.bai ex5.bam ex5.bam.bai
+all: ex1.glf ex1.pileup.gz ex1.bam.bai ex1.glfview.gz ex2.sam.gz ex2.sam ex1.sam \
+	ex3.bam ex3.bam.bai \
+	ex4.bam ex4.bam.bai \
+	ex5.bam ex5.bam.bai \
+	ex6.bam 
 		@echo; echo \# You can now launch the viewer with: \'samtools tview ex1.bam ex1.fa\'; echo;
 
 ex2.sam.gz: ex1.bam ex1.bam.bai
@@ -13,6 +17,9 @@ ex4.bam: ex4.sam ex1.fa.fai
 ex5.bam:  ex5.sam ex1.fa.fai
 	samtools import ex1.fa.fai ex5.sam ex5.bam
 
+ex6.bam:  ex6.sam ex1.fa.fai
+	samtools import ex1.fa.fai ex6.sam ex6.bam
+
 %.sam: %.sam.gz
 	gunzip < $< > $@
 
@@ -24,7 +31,7 @@ ex1.bam:ex1.sam.gz ex1.fa.fai
 		samtools index $<
 ex1.pileup.gz:ex1.bam ex1.fa
 		samtools pileup -cf ex1.fa ex1.bam | gzip > ex1.pileup.gz
-ex1.glf:ex1.bam ex1.fa
+ex1.glf:ex1.bam ex1.fa	
 		samtools pileup -gf ex1.fa ex1.bam > ex1.glf
 ex1.glfview.gz:ex1.glf
 		samtools glfview ex1.glf | gzip > ex1.glfview.gz
