--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,8 @@ include tests/ex1.fa
 include tests/ex1.sam.gz
 include tests/ex3.sam
 include tests/ex4.sam
+include tests/ex5.sam
+include tests/ex6.sam
 include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
