--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -19,6 +19,7 @@ include tests/ex3.sam
 include tests/ex4.sam
 include tests/ex5.sam
 include tests/ex6.sam
+include tests/ex7.sam
 include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
