--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,8 +9,12 @@ include INSTALL
 include KNOWN_BUGS
 include THANKS
 include pysam/csamtools.pxd
+include pysam/ctabix.pxd
 include pysam/pysam_util.h
 include samtools/*.h
+include tabix/*.h
+
+# pysam tests
 include tests/00README.txt
 include tests/Makefile
 include tests/ex1.fa
@@ -23,4 +27,10 @@ include tests/ex7.sam
 include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
+
+# tabix tests
+include tests/tabix_test.py
+include tests/example.gtf.gz
+include tests/example.gtf.gz.tbi
+
 
