--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,4 +1,4 @@
-all: ex1.glf ex1.pileup.gz ex1.bam.bai ex1.glfview.gz \
+all: ex1.pileup.gz ex1.bam.bai \
 	ex2.sam.gz ex2.sam ex1.sam \
 	ex2.bam \
 	ex3.bam ex3.bam.bai \
@@ -24,10 +24,8 @@ ex1.bam:ex1.sam.gz ex1.fa.fai
 		samtools index $<
 ex1.pileup.gz:ex1.bam ex1.fa
 		samtools pileup -cf ex1.fa ex1.bam | gzip > ex1.pileup.gz
-ex1.glf:ex1.bam ex1.fa	
-		samtools pileup -gf ex1.fa ex1.bam > ex1.glf
-ex1.glfview.gz:ex1.glf
-		samtools glfview ex1.glf | gzip > ex1.glfview.gz
 
 clean:
-		rm -fr *.bam *.bai *.glf* *.fai *.pileup* *~ calDepth *.dSYM pysam_*.sam ex2.sam ex2.sam.gz ex1.sam
+	rm -fr *.bam *.bai *.fai *.pileup* \
+		*~ calDepth *.dSYM pysam_*.sam \
+	ex2.sam ex2.sam.gz ex1.sam
