--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -25,6 +25,8 @@ include tests/ex5.sam
 include tests/ex6.sam
 include tests/ex7.sam
 include tests/ex8.sam
+include tests/ex9_fail.sam
+include tests/ex9_nofail.sam
 include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
