bugfixes: fixed ownership problem of filenames, fixed large int values in AlignedRead.opt(), large float values still unsolved.
--HG--
branch : rel-0.3.1

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,7 +5,8 @@ all: ex1.glf ex1.pileup.gz ex1.bam.bai ex1.glfview.gz \
 	ex4.bam ex4.bam.bai \
 	ex5.bam ex5.bam.bai \
 	ex6.bam \
-	ex8.bam
+	ex8.bam \
+	ex10.bam ex10.bam.bai
 
 ex2.sam.gz: ex1.bam ex1.bam.bai
 		samtools view -h ex1.bam | gzip > ex2.sam.gz
