added new files to MANIFEST.in, also addressed issue 56
--HG--
branch : dev-0.4

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,10 +8,14 @@ include COPYING
 include INSTALL
 include KNOWN_BUGS
 include THANKS
+include ez_setup.py
 include pysam/csamtools.pxd
+include pysam/csamtools.pyx
+include pysam/csamtools.c
 include pysam/ctabix.pxd
 include pysam/pysam_util.h
 include samtools/*.h
+include samtools/*/*.h
 include tabix/*.h
 
 # pysam tests
