changes to MANIFEST.in and test/Makefile to make sure that tests run from tarball

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -29,8 +29,9 @@ include tests/ex5.sam
 include tests/ex6.sam
 include tests/ex7.sam
 include tests/ex8.sam
-include tests/ex9_fail.sam
-include tests/ex9_nofail.sam
+include tests/ex9_fail.bam
+include tests/ex9_nofail.bam
+include tests/ex10.sam
 include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
