--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -21,6 +21,7 @@ include pysam/TabProxies.pxd
 include pysam/cvcf.pyx
 include pysam/cvcf.pxd
 include pysam/cvcf.c
+include pysam/*.c
 include pysam/pysam_util.h
 include samtools/*.h
 include samtools/*/*.h
@@ -44,6 +45,7 @@ include tests/example.py
 include tests/pysam_test.py
 include tests/segfault_tests.py
 include tests/example_*.sam
+include tests/example_btag.bam
 include tests/tag_bug.bam
 include tests/example.vcf40
 include tests/example_empty_header.bam
@@ -56,4 +58,3 @@ include tests/example.gtf.gz.tbi
 include tests/example.bed.gz
 include tests/example.bed.gz.tbi
 include tests/vcf-examples/*.vcf
-
