Convert setup to install via packages and package_data.  It is essentially impossible use the 'data_files' mechanism to install header files correctly across realistic scenarios (easy_install/pip, virtualenv, etc.).

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -22,6 +22,7 @@ include pysam/cvcf.pyx
 include pysam/cvcf.pxd
 include pysam/cvcf.c
 include pysam/*.c
+include pysam/*.h
 include pysam/pysam_util.h
 include samtools/*.h
 include samtools/*/*.h
