issue 107 - pileup(truncate) now works

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -9,6 +9,7 @@ all: ex1.pileup.gz ex1.bam.bai \
 	ex9_nofail.bam.bai \
 	ex9_fail.bam.bai \
         ex10.bam ex10.bam.bai \
+	ex11.bam \
 	example_unmapped_reads_no_sq.bam \
 	example_user_header.bam \
 	example_btag.bam
