fixed various issues by adding documentation

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,8 +12,7 @@ all: ex1.pileup.gz ex1.bam.bai \
 	example_unmapped_reads_no_sq.bam \
 	example_user_header.bam \
 	example_btag.bam \
-	example_bai.bam 
-	
+	example_bai.bam \
 
 ex2.sam.gz: ex1.bam ex1.bam.bai
 		samtools view -h ex1.bam | gzip > ex2.sam.gz
