--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -34,35 +34,37 @@ include pysam.py
 # pysam tests
 include tests/00README.txt
 include tests/Makefile
-include tests/ex1.fa
-include tests/ex1.sam.gz
-include tests/ex3.sam
-include tests/ex4.sam
-include tests/ex5.sam
-include tests/ex6.sam
-include tests/ex7.sam
-include tests/ex8.sam
-include tests/ex9_fail.bam
-include tests/ex9_nofail.bam
-include tests/ex10.sam
-include tests/example.py
-include tests/pysam_test.py
-include tests/segfault_tests.py
-include tests/example_*.sam
-include tests/example_btag.bam
-include tests/tag_bug.bam
-include tests/example.vcf40
-include tests/example_empty_header.bam
-include tests/test_unaligned.bam
-include tests/issue100.bam
+include tests/pysam_data
+include tests/tabix_data
+#ex1.fa
+#include tests/ex1.sam.gz
+#include tests/ex3.sam
+#include tests/ex4.sam
+#include tests/ex5.sam
+#include tests/ex6.sam
+#include tests/ex7.sam
+#include tests/ex8.sam
+#include tests/ex9_fail.bam
+#include tests/ex9_nofail.bam
+#include tests/ex10.sam
+#include tests/example.py
+#include tests/pysam_test.py
+#include tests/segfault_tests.py
+#include tests/example_*.sam
+#include tests/example_btag.bam
+#include tests/tag_bug.bam
+#include tests/example.vcf40
+#include tests/example_empty_header.bam
+#include tests/test_unaligned.bam
+#include tests/issue100.bam
 
 # tabix tests
-include tests/tabix_test.py
-include tests/example.gtf.gz
-include tests/example.gtf.gz.tbi
-include tests/example.bed.gz
-include tests/example.bed.gz.tbi
-include tests/vcf-examples/*.vcf
+#include tests/tabix_test.py
+#include tests/example.gtf.gz
+#include tests/example.gtf.gz.tbi
+#include tests/example.bed.gz
+#include tests/example.bed.gz.tbi
+#include tests/vcf-examples/*.vcf
 
 # documentation
 include doc/*
