--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ pysam/TabProxies.c
 pysam/csamtools.c
 pysam/ctabix.c
 pysam/cvcf.c
-  
+pysam/chtslib.c  
 
 ###### Generic python ignores below ######
 
