--- a/tests/pysam_data/Makefile
+++ b/tests/pysam_data/Makefile
@@ -8,9 +8,10 @@ all: ex1.pileup.gz \
 	ex1.sam ex1.bam \
 	ex2.sam.gz ex2.sam ex2.bam \
 	$(BAM) $(BAI) \
-	example_bai.bam
+	example_bai.bam \
+	ex2_truncated.bam
 
-# ex2.sam - as ex1.sam, but with heaer
+# ex2.sam - as ex1.sam, but with header
 ex2.sam.gz: ex1.bam ex1.bam.bai
 	samtools view -h ex1.bam | gzip > ex2.sam.gz
 
@@ -33,6 +34,9 @@ ex1.bam:ex1.sam.gz ex1.fa.fai
 
 ex1.pileup.gz:ex1.bam ex1.fa
 		samtools pileup -cf ex1.fa ex1.bam | gzip > ex1.pileup.gz
+
+ex2_truncated.bam: ex2.bam
+	head -c 124000 ex2.bam > ex2_truncated.bam
 
 example_unmapped_reads_no_sq.bam: example_unmapped_reads_no_sq.sam
 	touch tmp.list
