--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ tests/*.c
 tests/*.pyxbldc
 tests/*.sam
 tests/*.fai
-tests/pysam_test_work
+tests/pysam_data
 
 # cython files
 pysam/TabProxies.c
