--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@ pysam/csamtools.c
 pysam/ctabix.c
 pysam/cvcf.c
 pysam/chtslib.c  
+pysam/calignedsegment.c
+pysam/calignmentfile.c
+pysam/cbcf.c
+pysam/cfaidx.c
+pysam/chtslib.c
+pysam/csamfile.c
+pysam/ctabixproxies.c
 
 ###### Generic python ignores below ######
 
