--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ tests/*.pyxbldc
 tests/*.sam
 tests/*.fai
 tests/pysam_data
+tests/cbcf_data
 
 # cython files
 pysam/TabProxies.c
@@ -20,6 +21,7 @@ pysam/csamtools.c
 pysam/ctabix.c
 pysam/cvcf.c
 pysam/chtslib.c  
+pysam/cutils.c
 pysam/calignedsegment.c
 pysam/calignmentfile.c
 pysam/cbcf.c
