Test new VariantFile index specification

--- a/tests/cbcf_data/Makefile
+++ b/tests/cbcf_data/Makefile
@@ -1,12 +1,19 @@
 VCF=$(wildcard *.vcf)
 
 VCFGZ=$(VCF:%.vcf=%.vcf.gz)
+BCF=$(VCF:%.vcf=%.bcf)
 
-all: $(VCFGZ)
+all: $(VCFGZ) $(BCF)
 
 %.vcf.gz: %.vcf
 	bgzip < $< > $@
-	tabix -p vcf $@
+	tabix -p vcf $@    # create tbi index
+	bcftools index $@  # create csi index
+
+%.bcf: %.vcf.gz
+	bcftools view -O b $< -o $@
+	bcftools index $@
 
 clean:
-	rm -f *.gz *.tbi
+	rm -f *.gz *.tbi *.csi *.bcf
+
