{AH} fix bug in Makefile

--- a/tests/cbcf_data/Makefile
+++ b/tests/cbcf_data/Makefile
@@ -14,7 +14,7 @@ all: $(VCFGZ) $(BCF)
 	bcftools view -O b $< -o $@
 	bcftools index $@
 
-example_empty.bcf: %.vcf.gz
+example_empty.bcf: example_empty.vcf.gz
 	touch $@
 
 clean:
