More rpath stuff

--- a/ci/conda-recipe/meta.yaml
+++ b/ci/conda-recipe/meta.yaml
@@ -7,6 +7,10 @@ source:
 
 build:
   number: 0
+  rpaths:
+    - lib/
+    - {{ "lib/python%s/site-packages/" % environ.get('PY_VER', 0) }}
+
 
 requirements:
   build:
