--- a/ci/conda-recipe/meta.yaml
+++ b/ci/conda-recipe/meta.yaml
@@ -1,12 +1,15 @@
 package:
   name: pysam
-  version: 0.8.5
+  version: 0.9.0
 
 source:
   path: ../../
 
 build:
   number: 0
+  rpaths:
+    - lib/
+    - {{ "lib/python%s/site-packages/pysam/" % environ.get('PY_VER', 0) }}
 
 requirements:
   build:
