--- a/htslib/Makefile
+++ b/htslib/Makefile
@@ -224,6 +224,11 @@ libhts.a: $(LIBHTS_OBJS)
 	$(AR) -rc $@ $(LIBHTS_OBJS)
 	-$(RANLIB) $@
 
+print-config:
+	@echo LDFLAGS = $(LDFLAGS)
+	@echo LIBHTS_OBJS = $(LIBHTS_OBJS)
+	@echo LIBS = $(LIBS)
+	@echo PLATFORM = $(PLATFORM)
 
 # The target here is libhts.so, as that is the built file that other rules
 # depend upon and that is used when -lhts appears in other program's recipes.
@@ -420,6 +425,7 @@ force:
 
 .PHONY: all check clean distclean distdir force
 .PHONY: install install-pkgconfig installdirs lib-shared lib-static
-.PHONY: maintainer-clean mostlyclean plugins print-version tags test testclean
+.PHONY: maintainer-clean mostlyclean plugins print-version print-config
+.PHONY: tags test testclean
 .PHONY: clean-so install-so
 .PHONY: clean-dylib install-dylib
