{AH} add htslib Makefile to tar-ball

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -24,6 +24,7 @@ include samtools/*/*.h
 include htslib/*.c
 include htslib/*.h
 exclude htslib/config.h
+include htslib/Makefile
 include htslib/configure
 include htslib/config.mk.in
 include htslib/config.h.in
