{AH} add htslib_vars.mk to tarball

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -25,6 +25,7 @@ include htslib/*.c
 include htslib/*.h
 exclude htslib/config.h
 include htslib/Makefile
+include htslib/htslib_vars.mk
 include htslib/configure
 include htslib/config.mk.in
 include htslib/config.h.in
