Create bcftools/config.h if it doesn't exist
since bcftools and samtools 1.5 are using the same build system,
they need to be treated the same way. Compilation fails when bcftools
can't find its config.h.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,7 @@ include KNOWN_BUGS
 include THANKS
 include cy_build.py
 include requirements.txt
+exclude bcftools/config.h
 include pysam/libc*.pxd
 include pysam/libc*.pyx
 include pysam/libc*.c
