{AH} update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ tests/*.sam
 tests/*.fai
 tests/pysam_data
 tests/cbcf_data
+tests/tabix_data
 
 samtools/config.h
 htslib/config.status
@@ -52,6 +53,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+doc/_build
 
 # Installer logs
 pip-log.txt
