--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,16 +17,22 @@ include pysam/libc*.c
 include pysam/*.c
 include pysam/*.h
 
+# exclude tests from pypi tar-ball - they
+# require additional data
+prune tests/
+
 # samtools
 include samtools/configure
 include samtools/config.mk.in
 include samtools/config.h.in
 include samtools/*.h
+include samtools/*.c
 exclude samtools/config.h
 include samtools/*/*.h
 
 # bcftools
 include bcftools/*.h
+include bcftools/*.c
 exclude bcftools/config.h
 
 # htslib
@@ -49,40 +55,6 @@ include htslib/win/*.h
 include cy_build.py
 include pysam.py
 include requirements.txt
-
-# pysam tests
-include tests/00README.txt
-include tests/pysam_data
-include tests/tabix_data
-include tests/*.py
-#ex1.fa
-#include tests/ex1.sam.gz
-#include tests/ex3.sam
-#include tests/ex4.sam
-#include tests/ex5.sam
-#include tests/ex6.sam
-#include tests/ex7.sam
-#include tests/ex8.sam
-#include tests/ex9_fail.bam
-#include tests/ex9_nofail.bam
-#include tests/ex10.sam
-#include tests/example.py
-#include tests/pysam_test.py
-#include tests/segfault_tests.py
-#include tests/example_*.sam
-#include tests/example_btag.bam
-#include tests/tag_bug.bam
-#include tests/example.vcf40
-#include tests/example_empty_header.bam
-#include tests/test_unaligned.bam
-#include tests/issue100.bam
-
-# tabix tests
-#include tests/example.gtf.gz
-#include tests/example.gtf.gz.tbi
-#include tests/example.bed.gz
-#include tests/example.bed.gz.tbi
-#include tests/vcf-examples/*.vcf
 
 # documentation
 include doc/*
