Trivial .gitignore fixes
Remove htslib/htslib.pc.tmp, which is a generated file and
should be ignored -- as should htslib/htslib-uninstalled.pc.
Fix .gitignore typo.

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,13 @@ tests/cbcf_data
 tests/tabix_data
 
 samtools/config.h
-bcftools/config.g
+bcftools/config.h
 htslib/config.status
 htslib/config.h
 htslib/config.log
 htslib/config.mk
+htslib/htslib.pc.tmp
+htslib/htslib-uninstalled.pc
 pysam/config.py
 
 # linking tests
