--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ matrix:
       env:
         - CIBW_BEFORE_BUILD="yum install -y zlib-devel bzip2-devel xz-devel && pip install -r requirements.txt"
         - CIBW_ENVIRONMENT='HTSLIB_CONFIGURE_OPTIONS="--disable-libcurl"'
+	- CIBW_TEST_COMMAND='python -c "import pysam"'
       addons:
         apt:
           packages:
@@ -45,20 +46,21 @@ matrix:
         - python3 setup.py build_ext --inplace
         - python3 setup.py sdist
         - twine check dist/*
-        - twine upload --skip-existing dist/*
+#        - twine upload --skip-existing dist/*
     - stage: deploy
       os: osx
       language: generic
       env:
         - CIBW_BEFORE_BUILD="pip install -r requirements.txt"
         - CIBW_ENVIRONMENT='HTSLIB_CONFIGURE_OPTIONS="--disable-libcurl"'
+	- CIBW_TEST_COMMAND='python -c "import pysam"'
       addons: {}
       <<: *deploy_common
       script:
         - set -e
         - cibuildwheel --output-dir dist
         - twine check dist/*
-        - twine upload --skip-existing dist/*
+#       - twine upload --skip-existing dist/*
 
 addons:
   apt:
