Add Python 3.8 and various devtools/run_tests_travis.sh tidy ups
Add a Python 3.8 build to the Travis build matrix.

Silence wget. No longer need to force use of $PREFIX/{include,lib};
instead ensure we don't see the HTSlib headers in the Conda environment
ahead of pysam's included copy of HTSlib.

Display a more meaningful selection of the HTSlib configuration variables.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - CONDA_PY=2.7
     - CONDA_PY=3.6
     - CONDA_PY=3.7
+    - CONDA_PY=3.8
   global:
     - PYSAM_LINKING_TEST=1
     - TWINE_USERNAME=grepall
