--- a/tests/pysam_data/Makefile
+++ b/tests/pysam_data/Makefile
@@ -89,7 +89,7 @@ explicit_index.cram: ex1.cram
 	cp ex1.cram $@
 
 clean:
-	rm -fr *.bam *.bai *.csi *.fai *.gzi *.pileup* *.cram *.crai \
+	rm -fr [a-z]*.bam *.bai *.csi *.fai *.gzi *.pileup* [a-z]*.cram *.crai \
 	*~ calDepth *.dSYM pysam_*.sam \
 	ex2.sam ex2.sam.gz ex1.sam ex1.fa.gz \
 	with_md.sam.gz \
