--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,8 @@ addopts = -s -v
 testpaths = pysam tests
 pep8maxlinelength = 120
 pep8ignore = E402
+
+[build]
+compiler=mingw32
+[build_ext]
+compiler=mingw32
