Add win32/*.[ch] to MANIFEST.in
It's not clear that these files are still required on MinGW.
However while they are still used in setup.py, they should be
added to generated tarballs. Fixes #983.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,6 +16,7 @@ include pysam/libc*.pyx
 include pysam/libc*.c
 include pysam/*.c
 include pysam/*.h
+include win32/*.[ch]
 
 # exclude tests from pypi tar-ball - they
 # require additional data
