Create htslib/samtools config_vars.h files during setup
HTSlib and samtools 1.12 generate header files containing CC/CFLAGS/etc
so that they can be displayed for debugging purposes. We could arrange
to generate them via the respective makefile rules, but this is not well
arranged in the samtools makefile and in fact would produce somewhat
misleading results. Instead we generate them in Python, using the same
sysconfig and environment variable overrides as are used to build the
C source code.

Add a prebuild_func entry point to CyExtension so that we have a
callback after all the LDFLAGS additions have been made. Use it for
the libchtslib and libcsamtools modules to generate the respective
headers. In future, more configuration steps can be moved here.

Clean these headers in "clean_ext", and also clean the config.h headers
generated by running configure.

Pysam has one version.h file for htslib/samtools/bcftools, but the
samtools makefile is set up to add CC/CFLAGS/etc to samtools/version.h.
Instead add another specific substitution to devtools/import.py to
add a `#include` of a separate config_vars.h header.

Ignore the generated config_vars.h files and an upcoming htslib-1.12
generated makefile. Exclude "tests" from devtools/import.py's copying,
to omit the upcoming htslib-1.12/htscodes/tests/ directory.

--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,14 @@ tests/cbcf_data
 tests/tabix_data
 
 samtools/config.h
+samtools/samtools_config_vars.h
 bcftools/config.h
 htslib/config.status
 htslib/config.h
 htslib/config.log
 htslib/config.mk
+htslib/config_vars.h
+htslib/htscodecs.mk
 htslib/htslib.pc.tmp
 htslib/htslib-uninstalled.pc
 pysam/config.py
