Fix `samtools view --no-PG` probe when stdin is not a terminal
Use the long help option so that we get the usage display on stdout
irrespective of whether stdin is a terminal. In particular, this fixes
the probe when run from CI, e.g., GitHub Actions. Hat tip @marcelm.

--- a/tests/pysam_data/Makefile
+++ b/tests/pysam_data/Makefile
@@ -3,7 +3,7 @@ BAM=$(SAM:%.sam=%.bam)
 BAI=$(BAM:%.bam=%.bam.bai)
 CRAM=ex1.cram ex2.cram ex3.cram
 CRAI=$(CRAM:%.cram=%.cram.crai)
-NO_PG:=$(findstring --no-PG,$(shell samtools view))
+NO_PG:=$(findstring --no-PG,$(shell samtools view '-?'))
 
 # ex2.bam - bam file without index
 
