--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,38 @@ universal = 0
 # -v: verbose output
 addopts = -s -v
 testpaths = pysam tests
+
+[flake8]
+max-line-length = 100
+max-complexity = 23
+extend-ignore = E111, E117, E124, E125, E201, E202, E211, E225, E231, E265, E266, E302, E303, E305, E402, E501, E713, E722, E741, F401, F403, F405, F811, F821, F841, W291, W293, W391, W605
+
+# E111 indentation is not a multiple of
+# E117 over-indented
+# E124 closing bracket does not match visual indentation
+# E125 continuation line with same indent as next logical line
+# E201 whitespace after '{'
+# E202 whitespace before '}'
+# E211 whitespace before '('
+# E225 missing whitespace around operator
+# E231 missing whitespace after ':'
+# E265 block comment should start with '# '
+# E266 too many leading '#' for block comment
+# E302 expected 2 blank lines, found 1
+# E303 too many blank lines
+# E305 expected 2 blank lines after class or function definition, found 1
+# E402 module level import not at top of file
+# E501 line too long
+# E713 test for membership should be 'not in'
+# E722 do not use bare 'except'
+# E741 ambiguous variable name '...'
+# F401 '...' imported but unused
+# F403 'from ... import *' used; unable to detect undefined names
+# F405 '...' may be undefined, or defined from star imports: ...
+# F811 redefinition of unused '...' from line ...
+# F821 undefined name '...'
+# F841 local variable '...' is assigned to but never used
+# W291 trailing whitespace
+# W293 blank line contains whitespace
+# W391 blank line at end of file
+# W605 invalid escape sequence '...'
