--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,8 @@ testpaths = pysam tests
 [flake8]
 max-line-length = 100
 max-complexity = 23
-extend-ignore = E111, E117, E124, E125, E201, E202, E211, E225, E231, E265, E266, E302, E303, E305, E402, E501, E713, E722, E741, F401, F403, F405, F811, F821, F841, W291, W293, W391, W605
+extend-ignore = E111, E117, E124, E125, E201, E202, E211, E225, E231, E265, E266, E302, E303, E305, E402, E501, E713, E722, E741, F403, F405, F811, F821, F841, W291, W293, W391, W605
+per-file-ignores = __init__.py:F401
 
 # E111 indentation is not a multiple of
 # E117 over-indented
@@ -31,7 +32,6 @@ extend-ignore = E111, E117, E124, E125, E201, E202, E211, E225, E231, E265, E266
 # E713 test for membership should be 'not in'
 # E722 do not use bare 'except'
 # E741 ambiguous variable name '...'
-# F401 '...' imported but unused
 # F403 'from ... import *' used; unable to detect undefined names
 # F405 '...' may be undefined, or defined from star imports: ...
 # F811 redefinition of unused '...' from line ...
