Refactor iterator error message and simplify test case
Construct the error message in a common subroutine; eventually we may
use it in IteratorRowRegion.__next__() as well.

Simplify the test case: just append a broken alignment record, which
causes a -4 return code similarly to the output from make_corrupt_bam.sh.

--- a/tests/pysam_data/Makefile
+++ b/tests/pysam_data/Makefile
@@ -66,8 +66,9 @@ ex1.pileup.gz:ex1.bam ex1.fa
 ex2_truncated.bam: ex2.bam
 	head -c 124000 ex2.bam > ex2_truncated.bam
 
+# Append a corrupt read with block_size < sizeof(bam_core_t fields)
 ex2_corrupt.bam: ex2.bam
-	./make_corrupt_bam.sh $< $@
+	(bgzip -d < $<; printf '\37\0\0\0\1\0\0\0') | bgzip > $@
 
 ex1_csi.bam: ex1.bam
 	cp ex1.bam ex1_csi.bam
